marcelo bio fix

--- a/index.html
+++ b/index.html
@@ -137,7 +137,10 @@
                                     Marcelo Morgade
                                 </div>
 								<div class="project-category text-faded">
-									Marcelo has been working as a technical leader in several high throughput agile projects, from design, testing and coding to continuous delivery and deploy. He is still deciding what he like the most: learning or sharing new knowledge 
+									Marcelo has been working as a technical leader in several high throughput agile projects, from design, testing and coding to continuous delivery and deploy. 
+									<span class="hidden-md">
+									He is still deciding what he like the most: learning or sharing new knowledge 
+									</span>
                                 </div>
                             </div>
                         </div>
