--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
                                     André Novaes
                                 </div>
 								<div class="project-category text-faded">
-                                    André is a team member and here will be place some cool bio text. 
-									André is a team member and here will be place some cool bio text.
-									André is a team member and here will be place some cool bio text. 
+                                    André is a software engineer graduated from Federal University of Pernambuco (Computer Science Bachelor's degree),
+					one of most important IT centers in Brazil. With extensive experience in Java, 
+					currently he's leading a web application development team fluent in technologies like Hibernate, Spring, REST APIs, Angular JS and HTML5. 
                                 </div>
                             </div>
                         </div>
