--- a/index.html
+++ b/index.html
@@ -19,9 +19,6 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 
-    <!-- Plugin CSS -->
-    <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
-
     <!-- Theme CSS -->
     <link href="css/creative.min.css" rel="stylesheet">
 
@@ -103,9 +100,9 @@
                                     André Novaes
                                 </div>
 								<div class="project-category text-faded">
-                                    André is a software engineer graduated from Federal University of Pernambuco (Computer Science Bachelor's degree),
-					one of most important IT centers in Brazil. With extensive experience in Java, 
-					currently he's leading a web application development team fluent in technologies like Hibernate, Spring, REST APIs, Angular JS and HTML5. 
+                                    André is a software engineer graduated from Federal University of Pernambuco<span class="hidden-md"> (Computer Science Bachelor's degree), one of most important IT centers in Brazil</span>. 
+									<span class="hidden-md">With extensive experience in Java, currently </span>
+									he leads a <span class="hidden-md">web application development</span> team fluent in technologies like Hibernate, Spring, REST, AngularJS and HTML5. 
                                 </div>
                             </div>
                         </div>
@@ -234,7 +231,6 @@
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
-    <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
     <!-- Theme JavaScript -->
     <script src="js/creative.min.js"></script>
